K8s/kanban-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanban-app
  namespace: kanban
spec:
  type: ClusterIP #assigns every pod own ip, no indiv. assignment, gem. Web
  selector:
    app: kanban-app
  ports:
    #- protocol: TCP #nur tcp||udp, nicht beide möglich in einem service
    - port: 8080
      targetPort: 8080
