K8s/kanban-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kanban-ui
  name: kanban-ui
  namespace: kanban
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: kanban-ui
  type: ClusterIP
